trunk/Archive2/94/03215ffa710e6a/output
main.cpp: In constructor 'Derived<F>::Derived()':
main.cpp:14:22: error: expected primary-expression before 'int'
         Base<F>::var<int,int,int>(1,2,3);
                      ^
main.cpp:14:22: error: expected ';' before 'int'
